# yolo_detection

./: .gitignore  .pdm-python  Makefile  pyproject.toml  train.py
